added new images

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -114,7 +114,7 @@
 
     "selectProfilePhotoLbl": "Select Profile Photo",
     "selectProfileLbl":"Please select profile photo",
-    "uploadProfilePictureLbl":"uploadProfilePicture",
+    "uploadProfilePictureLbl":"upload Profile Picture",
     "continueLbl":"Continue",
     "enterNameLbl":"Enter your name",
 
@@ -183,7 +183,7 @@
     "title1":"TEST YOUR KNOWLEDGE",
     "title2": "MIND BATTLES",
     "title3": "LEARN",
-    "description1": "There are hundereds of different categories to choose from",
+    "description1": "There are hundreds of different categories to choose from",
     "description2": "Challenge other players in daily intellectual battles",
     "description3": "Perform tasks, get cool bonuses ,ranks and awards",
 
@@ -230,7 +230,7 @@
     "desContest":"Play quiz contest",
     "desGuessTheWord":"Fun vocabulary game",
     "desFunAndLearn":"it's like a Comprehension game",
-    "desTrueAndFalse":"Quiz with True / Fales format",
+    "desTrueAndFalse":"Quiz with True / False format",
 
     "noCoinsMsg": "No enough coins to play contest",
     "defaultErrorMessage" : "Something went wrong. Please try again later",
@@ -250,12 +250,12 @@
      "fileUploadFail" : "Unable to upload image",
      "dailyQuizAlreadyPlayed" : "Already played",
      "noMatchesPlayed" : "No matches played, yet",
-     "noUpcomingContest" : "No upcoimng contest",
+     "noUpcomingContest" : "No upcoming contest",
      "noContest" : "No contest",
      "notPlayedContest" : "Not played contest",
      "contestAlreadyPlayed" : "Already played",
      "roomAlreadyCreated" : "Room already created",
-     "unauthorizedAccess" : "Unautrhorized access",
+     "unauthorizedAccess" : "Unauthorized access",
      "levelLocked" : "Level is locked",
      "updateBookmarkFailure" : "Unable to update bookmark status",
      "lifeLineUsed" : "Already used this lifeline",
@@ -263,7 +263,7 @@
      "notesNotAvailable" : "Notes not available",
      "selectAllValues" : "Please select all values",
      "canNotStartGame" : "Can not start game",
-     "roomCodeInvalid" : "Roomcode is invalid",
+     "roomCodeInvalid" : "Room code is invalid",
      "gameStarted" : "Game already started",
 
     "roomIsFull" : "Room is full",
@@ -294,22 +294,3 @@
     "currentlyNotAvailable" : "Currently not available"
     
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
