--- a/assets/languages/es.json
+++ b/assets/languages/es.json
@@ -144,7 +144,7 @@
   "defeatLbl": "DERROTA",
   "betterNextLbl": "Mejor suerte la próxima vez",
   "winnerLbl": "Ganador",
-  "youLossLbl": "Pérdiste",
+  "youLossLbl": "Perdiste",
   "matchDrawLbl": "EMPATE",
   "looserLbl": "Perdedor",
   "playAgainBtn": "JUGAR DE NUEVO",
